# Tinic

./: Cargo.toml  readme.md
.zed/: debug.json  settings.json  tasks.json
crates/generics/src/: constants.rs  error_handle.rs  lib.rs  retro_paths.rs  types.rs
crates/libretro-sys/: Cargo.toml
crates/libretro_sys/: Cargo.toml
crates/retro-audio/: Cargo.toml
crates/retro-audio/src/: audio_driver.rs  audio_resample.rs  audios.rs  lib.rs
crates/retro-controllers/: Cargo.toml
crates/retro-controllers/src/: devices_manager.rs
crates/retro-core/: Cargo.toml  README.md
crates/retro-core/src/: av_info.rs  retro_core.rs  system.rs
crates/retro-core/src/core_env/: env_directory.rs  env_gamepads_io.rs  env_option.rs  env_video.rs  environment.rs
crates/retro-core/tests/common/: setup.rs
crates/retro-video/: Cargo.toml
crates/retro-video/src/: lib.rs  retro_env_callback.rs  sync.rs  video.rs
crates/retro-video/src/retro_gl/: shader_program.rs  texture.rs
crates/retro_audio/: Cargo.toml
crates/retro_audio/src/: audio_driver.rs  audio_resample.rs
crates/retro_av/src/: audio_driver.rs  audio_resample.rs  audios.rs  print_scree.rs  retro_av.rs  video.rs
crates/retro_av/src/retro_gl/: render.rs  shader.rs  shader_program.rs  texture.rs  window.rs
crates/retro_controllers/: Cargo.toml
crates/retro_controllers/src/: devices_manager.rs  keyboard.rs  lib.rs  retro_controller.rs  state_thread.rs
crates/retro_controllers/src/gamepad/: mod.rs  retro_gamepad.rs  update_gamepad_state_handle.rs
crates/retro_core/: Cargo.toml
crates/retro_core/src/: av_info.rs  graphic_api.rs  lib.rs  retro_core.rs  retro_perf.rs  system.rs
crates/retro_core/src/core_env/: env_directory.rs  env_gamepads_io.rs  env_option.rs  env_video.rs  environment.rs  mod.rs
crates/retro_core/src/managers/: args_manager.rs  option_manager.rs
crates/retro_core/src/test_tools/: core.rs  paths.rs
crates/retro_core/src/tools/: ffi_tools.rs  game_tools.rs  mod.rs  mutex_tools.rs  validation.rs
crates/retro_core/tests/: retro_core_test.rs
crates/retro_video/: Cargo.toml
crates/retro_video/src/: lib.rs  print_scree.rs  raw_texture.rs  retro_env_callback.rs  sync.rs  video.rs
crates/retro_video/src/retro_gl/: gl.rs  pixel.rs  render.rs  shader.rs  texture.rs  window.rs
crates/tinic/: Cargo.toml
crates/tinic-database/: Cargo.toml  readme.md
crates/tinic-database/src/: lib.rs  query.rs
crates/tinic-generics/: Cargo.toml
crates/tinic-ipc/: Cargo.toml
crates/tinic-ipc-protocol/: Cargo.toml
crates/tinic-ipc/src/: game_loop.rs  window_event_listener.rs
crates/tinic-super/: Cargo.toml
crates/tinic-super/src/: tinic_super.rs
crates/tinic-super/src/art/: mod.rs
crates/tinic-super/src/cores/: mod.rs
crates/tinic-super/src/infos/: has_installed.rs  read_file.rs
crates/tinic-super/src/rdb_manager/: helper.rs  rdb_parser.rs
crates/tinic-super/src/tools/: extract_files.rs  game_identifier.rs
crates/tinic/examples/: tinic_example.rs  tinic_pop_event.rs  tinic_ron_on_demand.rs  tinic_run.rs
crates/tinic/examples/common/: setup.rs
crates/tinic/src/: app_dispatcher.rs  lib.rs  tinic.rs  tinic_app.rs  tinic_app_ctx.rs
crates/tinic/src/app/: mod.rs  tinic_app_ctx.rs  window_events.rs
crates/tinic_database/: Cargo.toml
crates/tinic_database/src/: data_test.rs  lib.rs  tinic_database_connection.rs
crates/tinic_generics/: Cargo.toml
crates/tinic_ipc/: Cargo.toml
crates/tinic_ipc/src/: game_loop.rs  main.rs
crates/tinic_ipc/src/io/: mod.rs  stdin_reader.rs  stdout_writer.rs
crates/tinic_ipc_protocol/: Cargo.toml
crates/tinic_super/: Cargo.toml  readme.md
crates/tinic_super/examples/: tinic_super_example.rs
crates/tinic_super/src/: download.rs  event.rs  extract_files.rs  lib.rs  tinic_super.rs
crates/tinic_super/src/art/: helper.rs  mod.rs
crates/tinic_super/src/core_info/: helper.rs  install_core.rs  model.rs  try_update_infos.rs
crates/tinic_super/src/cores/: download.rs  installed.rs  mod.rs
crates/tinic_super/src/database/: helper.rs
crates/tinic_super/src/infos/: download.rs  get_compatibility_core_infos.rs  helper.rs  mod.rs
crates/tinic_super/src/rdb_manager/: download.rs  helper.rs  mod.rs  rdb.rs
crates/tinic_super/src/tools/: extract_files.rs
crates/tinic_super/tests/: tinic_super.rs
