[workspace]
resolver = "2"
members = [
    'crates/retro-controllers',
    'crates/retro-core',
    "crates/retro-video",
    "crates/tinic",
    "crates/tinic-generics",
    "crates/libretro-sys",
    "crates/tinic-super",
    "crates/retro-audio",
    "crates/tinic-ipc",
    "crates/tinic-ipc-protocol",
    "crates/tinic-database",
]
default-members = ["crates/tinic", "crates/tinic-ipc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
libretro-sys = { path = "crates/libretro-sys", version = "0.1.0" }
retro-audio = { path = "crates/retro-audio", version = "0.1.0" }
retro-controllers = { path = "crates/retro-controllers", version = "0.1.0" }
retro-core = { path = "crates/retro-core", version = "0.1.0", features = ["hw"] }
retro-video = { path = "crates/retro-video", version = "0.1.1" }
tinic-generics = { path = "crates/tinic-generics", version = "0.1.0" }
tinic-super = { path = "crates/tinic-super", version = "0.1.4" }
tinic-ipc-protocol = { path = "crates/tinic-ipc-protocol", version = "0.1.4" }
tinic-ipc = { path = "crates/tinic-ipc", version = "0.1.3" }
tinic-database = { path = "crates/tinic-database", version = "0.1.0" }
tinic = { path = "crates/tinic", version = "0.1.7" }


# Extern deps
reqwest = { version = "0.13.1", features = ["stream"] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
sevenz-rust = { version = "0.6.1" }
gilrs = "0.11.0"
image = "0.25.5"
rubato = "0.16.2"
cpal = "0.17.0"
raw-cpuid = "11.3.0"
uuid = { features = ["v4"], version = "1.19.0" }
bindgen = "0.72.0"
libloading = "0.8.8"
cc = "1.2.33"
cfg_aliases = "0.2.1"
gl_generator = "0.14.0"
glutin = "0.32.2"
winit = "0.30.8"
raw-window-handle = "0.6.2"
glutin-winit = "0.5.0"
ringbuf = "0.4.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.148"
sqlite = { version = "0.37.0", features = ["bundled"] }
# samplerate = "0.2.4"
