[workspace]
resolver = "2"
members = [
    'crates/retro_controllers',
    'crates/retro_core',
    "crates/retro_video",
    "crates/tinic",
    "crates/tinic_generics",
    "crates/libretro_sys",
    "crates/tinic_super",
    "crates/retro_audio",
    "crates/tinic_ipc",
    "crates/tinic_ipc_protocol",
    "crates/tinic_database",
]
default-members = ["crates/tinic", "crates/tinic_ipc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
retro_core = { path = "crates/retro_core", version = "0.1.0", features = ["hw"] }
retro_controllers = { path = "crates/retro_controllers", version = "0.1.0" }
retro_video = { path = "crates/retro_video", version = "0.1.1" }
retro_audio = { path = "crates/retro_audio", version = "0.1.0" }
libretro_sys = { path = "crates/libretro_sys", version = "0.1.0" }
tinic_generics = { path = "crates/tinic_generics", version = "0.1.0" }
tinic_super = { path = "crates/tinic_super", version = "0.1.4" }
tinic_ipc_protocol = { path = "crates/tinic_ipc_protocol", version = "0.1.4" }
tinic_ipc = { path = "crates/tinic_ipc", version = "0.1.3" }
tinic_database = { path = "crates/tinic_database", version = "0.1.0" }
tinic = { path = "crates/tinic", version = "0.1.7" }


# Extern deps
reqwest = { version = "0.13.1", features = ["stream"] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
sevenz-rust = { version = "0.6.1" }
gilrs = "0.11.0"
image = "0.25.5"
rubato = "0.16.2"
cpal = "0.17.0"
raw-cpuid = "11.3.0"
uuid = { features = ["v4"], version = "1.19.0" }
bindgen = "0.72.0"
libloading = "0.8.8"
cc = "1.2.33"
cfg_aliases = "0.2.1"
gl_generator = "0.14.0"
glutin = "0.32.2"
winit = "0.30.8"
raw-window-handle = "0.6.2"
glutin-winit = "0.5.0"
ringbuf = "0.4.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.148"
sqlite = { version = "0.37.0", features = ["bundled"] }
# samplerate = "0.2.4"
