[package]
name = "libretro-sys"
version = "0.1.0"
edition = "2021"
license = "GPL-3"
description = "libretro_sys"
repository = "https://github.com/Xsimple1010/Tinic/tree/master/crates/libretro_sys"
[dependencies]
libloading.workspace = true

[build-dependencies]
cc.workspace = true
bindgen.workspace = true