[package]
name = "retro-audio"
version = "0.1.0"
edition = "2024"
license = "GPL-3"
description = "retro_audio"
repository = "https://github.com/Xsimple1010/Tinic/tree/master/crates/retro-audio"

[features]
debug-logs = []

[dependencies]
cpal.workspace = true
rubato.workspace = true
libretro-sys.workspace = true
ringbuf.workspace = true
tinic-generics.workspace = true
retro-core.workspace = true
