[package]
name = "retro-core"        # nome único no crates.io
version = "0.1.0"
edition = "2024"
license = "GPL-3"
description = "Core abstractions for the Tinic emulator framework"
repository = "https://github.com/Xsimple1010/Tinic/tree/master/crates/retro-core"
readme = "README.md"
keywords = ["emulator", "libretro", "tinic"]
categories = ["emulators", "multimedia"]

[features]
core_logs = []
core_ev_logs = []
core_full_logs = ["core_ev_logs", "core_logs"]
hw = []

[dependencies]
raw-cpuid.workspace = true
uuid.workspace = true
libretro-sys.workspace = true
tinic-generics.workspace = true

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "retro_core"
path = "src/lib.rs"
