[package]
name = "retro_audio"
version = "0.1.0"
edition = "2024"
license = "GPL-3"
description = "retro_audio"

[features]
debug-logs = []

[dependencies]
cpal.workspace = true
rubato.workspace = true
libretro_sys.workspace = true
ringbuf.workspace = true
tinic_generics.workspace = true
retro_core.workspace = true