[package]
name = "tinic-ipc"
version = "0.1.3"
edition = "2024"
license = "GPL-3"
description = "Tinic is a runtime for Libretro cores that abstracts the native API and provides a ready-to-use foundation for cross-platform frontends. "
keywords = ["emulator", "libretro", "tinic"]
categories = ["emulators", "libretro"]
repository = "https://github.com/Xsimple1010/Tinic/tree/master/crates/tinic_ipc"

[dependencies]
tinic.workspace = true
serde_json.workspace = true
tinic-ipc-protocol.workspace = true
