[package]
name = "tinic-super"
version = "0.1.4"
edition = "2024"
license = "GPL-3"
description = "tinic-super"
repository = "https://github.com/Xsimple1010/Tinic/tree/master/crates/tinic-super"


[dependencies]
tinic-generics.workspace = true
reqwest.workspace = true
zip.workspace = true
sevenz-rust.workspace = true
futures-util = "0.3.31"
tokio = { version = "1.49.0", features = ["full"] }
rmp-serde = "1.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.19"
crc32fast = "1.4.2"
rayon = "1.10"
