[package]
name = "tinic"
version = "0.1.7"
edition = "2024"
license = "GPL-3"
description = "Tinic is a runtime for Libretro cores that abstracts the native API and provides a ready-to-use foundation for cross-platform frontends. "
keywords = ["emulator", "libretro", "tinic"]
categories = ["emulators", "libretro"]
repository = "https://github.com/Xsimple1010/Tinic"

[dependencies]
retro_core.workspace = true
retro_controllers.workspace = true
retro_video.workspace = true
retro_audio.workspace = true
libretro-sys.workspace = true
tinic_generics.workspace = true
winit.workspace = true
serde = { version = "1.0.228", features = ["derive"] }