[package]
name = "tinic_ipc"
version = "0.1.3"
edition = "2024"
license = "GPL-3"
description = "Tinic is a runtime for Libretro cores that abstracts the native API and provides a ready-to-use foundation for cross-platform frontends. "
keywords = ["emulator", "libretro", "tinic"]
categories = ["emulators", "libretro"]

[dependencies]
tinic.workspace = true
serde_json.workspace = true
tinic_ipc_protocol.workspace = true
